# Projet-JV

./: ANSWERS.md  DESIGN copy.md  DESIGN.md  LOG.md  README.md  benchmarks.py  conftest.py  entities.py  gameview.py  gameview_backup_sword.py  main.py  mapgen.py  pyproject.toml  sword.py
assets/maps/: 1.txt  3.txt
assets/texturepack/: map5.txt  map7.txt  map9.txt
assets/texturepack/maps/: benchtest.txt  best_map.txt  map1.txt  map2.txt  map3.txt  map4.txt  map6.txt  map8.txt
benchmarks/: enemies.csv  walls.csv
maps/: map1.txt  map2.txt  map3.txt  map4.txt  map5.txt  testmap.txt
src/: constants_proj.py  helper.py  texture_manager.py  textures.py
src/entities/: base_entity.py  bat.py  blob.py
src/game/: gameview.py  objects.py  player.py
src/map_builder/: gates.py  level_builder.py  map_loader.py  platform_build.py  platforms.py  switch.py
src/weapons/: bow.py  sword.py  weapon.py
tests/: test_base_entity.py  tests_sword.py  tests_weapons.py
