[project]
name = "poo-projet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcade>=3.0.2",
    "mypy>=1.15.0",
    "types-pyyaml>=6.0.12.20250516",
]
[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
]
